# my_package_project

./: CHANGELOG.md  CONTRIBUTING.md  README.md  example_of_usage.ipynb  pyproject.toml  tests_perso.ipynb
backtests/: BlueWolfDoctor.csv  BrownFalconEngineer.csv  IndigoPantherFirefighter.csv  VioletCheetahBlacksmith.csv  WhiteHawkLawyer.csv
backtests/AmberFoxBlacksmith/: AmberFoxBlacksmith.ipynb  transaction_log.csv
backtests/BlackTigerNurse/: BlackTigerNurse.ipynb  transaction_log.csv
backtests/BlueLeopardPlumber/: BlueLeopardPlumber.ipynb  transaction_log.csv
backtests/BlueSharkFarmer/: BlueSharkFarmer.ipynb  transaction_log.csv
backtests/BrownOwlMechanic/: BrownOwlMechanic.ipynb  transaction_log.csv
backtests/CrimsonJaguarTailor/: CrimsonJaguarTailor.ipynb  transaction_log.csv
backtests/GoldCobraPlumber/: GoldCobraPlumber.ipynb  transaction_log.csv
backtests/GoldJaguarLawyer/: GoldJaguarLawyer.ipynb  transaction_log.csv
backtests/GreyEagleSoldier/: GreyEagleSoldier.ipynb  transaction_log.csv
backtests/IndigoPantherPhotographer/: IndigoPantherPhotographer.ipynb  transaction_log.csv
backtests/PinkBearAstronaut/: PinkBearAstronaut.ipynb  transaction_log.csv
backtests/TealGorillaArtist/: TealGorillaArtist.ipynb  transaction_log.csv
blockchain/: backtest.pkl
docs/: Makefile  conf.py  example.ipynb  make.bat
src/my_package_project/: data_treatment.py  graphs.py  operations.py
tests/: test_data_treatment.py  test_graphs.py  test_my_package_project.py
